--- a/assets/css/partials/navbar.css
+++ b/assets/css/partials/navbar.css
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 100;
 }
 .navbar__logo > a {
   text-decoration: none;
